# adventofcode-2024

./: .gitignore  README.md  pyproject.toml
src/aoc2024/: __init__.py  matrix.py  maze.py  utils.py  vector.py
src/aoc2024/day_01/: solution.py
src/aoc2024/day_02/: solution.py
src/aoc2024/day_03/: solution.py
src/aoc2024/day_04/: solution.py
src/aoc2024/day_05/: solution.py
src/aoc2024/day_06/: solution.py
src/aoc2024/day_07/: __init__.py  common.py  solution.py  solution_v1.py
src/aoc2024/day_08/: solution.py
src/aoc2024/day_09/: solution.py
src/aoc2024/day_10/: solution.py
src/aoc2024/day_11/: solution.py
src/aoc2024/day_12/: solution.py
src/aoc2024/day_13/: solution.py
src/aoc2024/day_14/: answers.txt  solution.py
src/aoc2024/day_15/: solution.py
src/aoc2024/day_16/: solution.py  test.3.txt
src/aoc2024/day_17/: solution.py  task.txt
src/aoc2024/day_18/: solution.py
src/aoc2024/day_19/: solution.py
src/aoc2024/day_20/: solution.py
src/aoc2024/day_21/: directional_keypad.py  numeric_keypad.py  solution.py  utils.py
src/aoc2024/day_22/: solution.py
src/aoc2024/day_23/: solution.py
src/aoc2024/day_24/: dot2png  graph.input.txt.p1.dot  graph.input.txt.p1.res.dot  graph.test.1.txt.p1.dot  graph.test.1.txt.p1.res.dot  graph.test.2.txt.p1.dot  graph.test.2.txt.p1.res.dot  solution.py
src/aoc2024/day_25/: solution.py
tests/aoc2024/: helpers.py  test_matrix.py
tests/aoc2024/day_01/: conftest.py  test_solution.py
tests/aoc2024/day_02/: conftest.py  test_solution.py
tests/aoc2024/day_03/: conftest.py  test_solution.py
(+51 files in other folders)
