[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aoc2024"
dynamic = ["version"]
authors = [
    {name = "Nikolai Krot", email = "talpus@gmail.com"}
]
description = "Solutions to Advent of Code, Year 2024"
readme = "README.md"
license = {file = "LICENSE.txt"}
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "networkx",
    "numpy",
    "pytest",
    "pytest-skip-slow",
    "pytest-datadir",
    "frozendict",
    "pygraphviz", # depends on system: graphviz libgraphviz-dev
    #"matplotlib",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "aoc2024.__version__"}

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = "src"
